--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ psycopg2-binary==2.9.10
 sqlparse==0.5.3
 typing_extensions==4.12.2
 django-debug-toolbar==4.1.0
-requests==2.32.3
 djangorestframework==3.15.2
+django-filter==24.3
+Markdown==3.7
