--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ django-debug-toolbar==4.1.0
 djangorestframework==3.15.2
 django-filter==24.3
 Markdown==3.7
+phonenumbers==8.13.55
+djangorestframework_simplejwt==5.4.0
