--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "isexe": "^2.0.0",
     "jackspeak": "^3.4.3",
     "jiti": "^1.21.7",
+    "jwt-decode": "^4.0.0",
     "lilconfig": "^3.1.3",
     "lines-and-columns": "^1.2.4",
     "lru-cache": "^10.4.3",
